--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "rebuild": "electron-rebuild -f -w  sqlite3"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "dependencies": {
     "electron": "^5.0.2",
     "tailwindcss": "^1.0.2"
+  },
+  "devDependencies": {
+    "electron-rebuild": "^1.8.5"
   }
 }
